Restructure content and add testing, security and spring boot

--- a/1. Spring Core/1.3 Aspect Oriented Programming with Spring.md
+++ b/1. Spring Core/1.3 Aspect Oriented Programming with Spring.md
@@ -1,4 +1,6 @@
-# [Aspect Oriented Programming with Spring](https://docs.spring.io/spring-framework/reference/core/beans/introduction.html)
+# [Aspect Oriented Programming with Spring](https://docs.spring.io/spring-framework/reference/core/aop.html)
+
+### Table of Content
 
 1. [AOP Concepts](https://docs.spring.io/spring-framework/reference/core/aop/introduction-defn.html)
 2. [Spring AOP Capabilities and Goals](https://docs.spring.io/spring-framework/reference/core/aop/introduction-spring-defn.html)
@@ -9,13 +11,14 @@
    3. [Declaring a Pointcut](https://docs.spring.io/spring-framework/reference/core/aop/ataspectj/pointcuts.html)
    4. [Declaring Advice](https://docs.spring.io/spring-framework/reference/core/aop/ataspectj/advice.html)
    5. [Aspect Instantiation Models](https://docs.spring.io/spring-framework/reference/core/aop/ataspectj/instantiation-models.html)
-   6. [An AOP Example](https://docs.spring.io/spring-framework/reference/core/aop/ataspectj/example.html) (Concurrency knowledge required)
+   6. [An AOP Example](https://docs.spring.io/spring-framework/reference/core/aop/ataspectj/example.html)
 5. [Proxying Mechanisms](https://docs.spring.io/spring-framework/reference/core/aop/proxying.html)
 
+### Spring Academy
+- [Introducing Aspect Oriented Programming](https://spring.academy/courses/spring-framework-essentials/lessons/spring-essentials-aop-what-aop-solve)
 
-## **Aspect Oriented Programming with Spring**
 
-### **Core Concepts**
+## Core Concepts
 - Aspect
 - Advice
 - Join point
@@ -25,11 +28,11 @@
 - Weaving
 - Introduction
 
-### **Annotations**
+### Annotations
 - `@Aspect`
 - `@Pointcut`
 
-### **Supported Pointcut Designators**
+### Pointcut Designators
 - `execution`
 - `within`
 - `this`
@@ -41,6 +44,6 @@
 - `@annotation`
 - kinded vs scoping vs contextual
 
-### **Supported Proxy Mechanisms**
+### Supported Proxy Mechanisms
 - JDK dynamic proxies
 - CGLIB
