--- a/2. Data Management/2.1 DAO Support.md
+++ b/2. Data Management/2.1 DAO Support.md
@@ -1,5 +1,7 @@
 # [DAO Support](https://docs.spring.io/spring-framework/reference/data-access/dao.html)
 
-### Core Concepts
+## Core Concepts
 - Exception Hierarchy
+- `DataAccessObject`
 - `@Repository`
+- `DataSource`
