--- a/2. Data Management/2.3 Transaction Management.md
+++ b/2. Data Management/2.3 Transaction Management.md
@@ -1,5 +1,7 @@
 # [Transaction Management](https://docs.spring.io/spring-framework/reference/data-access/transaction.html)
 
+### Table of Content
+
 1. [Advantages of the Spring Framework's Transaction Support Model](https://docs.spring.io/spring-framework/reference/data-access/transaction/motivation.html)
 2. [Understanding the Spring Framework Transaction Abstraction](https://docs.spring.io/spring-framework/reference/data-access/transaction/strategies.html)
 3. [Declarative Transaction Management](https://docs.spring.io/spring-framework/reference/data-access/transaction/declarative.html)
@@ -7,8 +9,11 @@
    2. [Using `@Transactional`](https://docs.spring.io/spring-framework/reference/data-access/transaction/declarative/annotations.html)
    3. [Propagation](https://docs.spring.io/spring-framework/docs/current/javadoc-api/org/springframework/transaction/annotation/Propagation.html)
 
+### Spring Academy
+- [Transaction Management with Spring](https://spring.academy/courses/spring-framework-essentials/lessons/spring-essentials-transactions-why)
 
-### Core Concepts
+
+## Core Concepts
 - Transaction
 - Propagation
 - Isolation
@@ -36,4 +41,4 @@
 - Atomicity: single unit (all or nothing)
 - Consistency: from valid state into a valid state
 - Isolation: no interference between transactions
-- Durability: commits (changes) are permanent, even after a crash
+- Durability: commits are permanent, even after a crash
