--- a/2. Data Management/2.4 Spring Data.md
+++ b/2. Data Management/2.4 Spring Data.md
@@ -1,5 +1,6 @@
 # Spring Data
 
+### Table of Content 
 1. [Getting Started](https://docs.spring.io/spring-data/jpa/reference/jpa/getting-started.html)
 2. [Core Concepts](https://docs.spring.io/spring-data/jpa/reference/repositories/core-concepts.html)
 3. [Configuration](https://docs.spring.io/spring-data/jpa/reference/repositories/create-instances.html)
@@ -7,7 +8,11 @@
 5. [Defining Query Methods](https://docs.spring.io/spring-data/jpa/reference/repositories/query-methods-details.html)
 6. [JPA Query Methods](https://docs.spring.io/spring-data/jpa/reference/jpa/query-methods.html)
 
-### Core Concepts
+### Spring Academy
+- [Spring Data JPA](https://spring.academy/courses/spring-boot/lessons/spring-boot-spring-data-jpa-jpa)
+
+
+## Core Concepts
 - `@Repository`
 - `CrudRepository`
 - `PagingAndSortingRepository`
@@ -48,8 +53,6 @@
 - `StartingWith`/`IsStartingWith`/`StartsWith`
 - `True`/`IsTrue`
 - `Within`/`IsWithin`
-
-
 - `IgnoreCase`/`IgnoringCase`
 - `AllIgnoreCase`/`AllIgnoringCase`
 - `OrderBy...`
