--- a/3. Spring MVC/3. Spring MVC.md
+++ b/3. Spring MVC/3. Spring MVC.md
@@ -1,8 +1,12 @@
 # [Spring MVC](https://docs.spring.io/spring-framework/reference/web/webmvc.html)
 
+### Table of Content
+
 1. [DispatcherServlet](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-servlet.html)
    1. [Special Bean Type](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-servlet/special-bean-types.html)
    2. [Web MVC Config](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-servlet/config.html)
+   3. [Interception](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-servlet/handlermapping-interceptor.html)
+   4. Describe the basic request processing lifecycle for REST requests
 2. [Annotated Controllers](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller.html)
    1. [Declaration](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann.html)
    2. [Mapping Requests](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-requestmapping.html)
@@ -15,19 +19,26 @@
       6. [@ResponseBody](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-methods/responsebody.html)
       7. [ResponseEntity](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-methods/responseentity.html)
    4. [Validation](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-validation.html)
-3. [RestTemplate](https://docs.spring.io/spring-framework/reference/integration/rest-clients.html#rest-resttemplate)
-4. 
+   5. [Exceptions](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-exceptionhandler.html)
+3. [URI Links](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-uri-building.html)
+4. [RestTemplate](https://docs.spring.io/spring-framework/reference/integration/rest-clients.html#rest-resttemplate)
 
-### Core Concepts
+### Spring Academy
+- [Building a REST API with Spring Boot](https://spring.academy/courses/building-a-rest-api-with-spring-boot)
+- [Web Application with Spring Boot](https://spring.academy/courses/spring-boot/lessons/spring-boot-web-app-intro)
+- [RESTful Application with Spring Boot](https://spring.academy/courses/spring-boot/lessons/spring-boot-rest-app-intro)
+
+
+## Core Concepts
 - `DispatcherServlet`
 - `@Controller`, `@RestController`
+- `@ControllerAdvice`
 - Mapping Requests
-- `@PathVariable`
-- `@RequestParam`
-- `@RequestHeader`
-- `@RequestBody`
-- `@Valid`/`@Validated`
-- `@ResponseBody`
+- Handler Methods
+- `@ExceptionHandler`
+- `UriComponents(Builder)`
+- `RestTemplate`
+- `@EnableWebMvc`
 
 ### Dispatcher Servlet
 - `HandlerMapping`
@@ -42,3 +53,15 @@
 - `@PutMapping`
 - `@DeleteMapping`
 - `@PatchMapping`
+
+### Handler Methods
+- `@PathVariable`
+- `@RequestParam`
+- `@RequestHeader`
+- `@RequestBody`
+- `@ResponseBody`
+- `ResponseEntity<T>`
+- 
+### Validation
+- `@Valid`/`@Validated`
+- `@Constraint` annotations
