--- a/2. Data Management/2.2 Data Access with JDBC.md
+++ b/2. Data Management/2.2 Data Access with JDBC.md
@@ -1,13 +1,16 @@
 # [Data Access with JDBC](https://docs.spring.io/spring-framework/reference/data-access/jdbc.html)
 
+### Table of Content
+
 1. [Choosing an Approach for JDBC Database Access](https://docs.spring.io/spring-framework/reference/data-access/jdbc/choose-style.html)
 2. [Package Hierarchy](https://docs.spring.io/spring-framework/reference/data-access/jdbc/packages.html)
 3. [Using the JDBC Core Classes to Control Basic JDBC Processing and Error Handling](https://docs.spring.io/spring-framework/reference/data-access/jdbc/core.html)
 
+### Spring Academy
+- [JDBC Simplification with Jdbc Template](https://spring.academy/courses/spring-framework-essentials/lessons/spring-essentials-jdbc-traditional-jdbctemplate)
 
-## Data Access with JDBC
 
-### Core Concepts
+## Core Concepts
 - `JdbcTemplate`
 - `queryForObject(..)` -> `SELECT`
 - `update(..)` -> `INSERT`, `UPDATE`, `DELETE`
