--- a/5. Security/5. Security.md
+++ b/5. Security/5. Security.md
@@ -48,6 +48,7 @@
 - `AccessDeniedException`
 - `SecurityInterceptor`
 - `@EnableMethodSecurity`
+- `@EnableGlobalMethodSecurity`
 - `@PreAuthorize`/`@PostAuthorize`
 
 ### Testing Security
