WIP: improving sections with explanations and short summaries

--- a/2. Data Management/2.3 Transaction Management.md
+++ b/2. Data Management/2.3 Transaction Management.md
@@ -21,6 +21,7 @@
 - Rollback
 - `@Transactional`
 - `@EnableTransactionManagement`
+- `TransactionTemplate`/`PlatformTransactionManager`
 
 ### Transaction Propagation
 - `REQUIRED` (default) 
