--- a/2. Data Management/2.4 Spring Data.md
+++ b/2. Data Management/2.4 Spring Data.md
@@ -13,10 +13,12 @@
 
 
 ## Core Concepts
+- `EntityManagerFactory`
+- `PlatformTransactionManager`, `JpaTransactionManager`
 - `@Repository`
 - `CrudRepository`
 - `PagingAndSortingRepository`
-- `@EnableJpaRepositories`
+- `@EnableJpaRepositories(basePackages = <...>)`
 - `@Query` + query generation
 
 ### [Query Method Subject Keywords](https://docs.spring.io/spring-data/jpa/reference/repositories/query-keywords-reference.html#appendix.query.method.subject)
@@ -24,7 +26,7 @@
 - `exists...By`
 - `count...By`
 - `delete...By`, `remove...By`
-- `...First<number>...`, `...Top<number>...`
+- `...First<number>...`, `...Top<number>...` (`<number>` is optional and works like `<number> = 1` if missing)
 - `...Distinct...`
 
 ### [Query Method Predicate Keywords and modifiers](https://docs.spring.io/spring-data/jpa/reference/repositories/query-keywords-reference.html#appendix.query.method.predicate)
