--- a/3. Spring MVC/3. Spring MVC.md
+++ b/3. Spring MVC/3. Spring MVC.md
@@ -13,11 +13,14 @@
    3. [Handler Methods](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-methods.html)
       1. [Method Arguments](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-methods/arguments.html)
       2. [Return Values](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-methods/return-types.html)
-      3. [@RequestParam](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-methods/requestparam.html)
-      4. [@RequestHeader](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-methods/requestheader.html)
-      5. [@RequestBody](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-methods/requestbody.html)
-      6. [@ResponseBody](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-methods/responsebody.html)
-      7. [ResponseEntity](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-methods/responseentity.html)
+      3. [Type conversion](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-methods/typeconversion.html)
+      4. [Matrix Variables](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-methods/matrix-variables.html)
+      5. [@RequestParam](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-methods/requestparam.html)
+      6. [@RequestHeader](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-methods/requestheader.html)
+      7. [@CookieValue](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-methods/cookievalue.html)
+      8. [@RequestBody](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-methods/requestbody.html)
+      9. [@ResponseBody](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-methods/responsebody.html)
+      10. [ResponseEntity](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-methods/responseentity.html)
    4. [Validation](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-validation.html)
    5. [Exceptions](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-controller/ann-exceptionhandler.html)
 3. [URI Links](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-uri-building.html)
@@ -30,38 +33,52 @@
 
 
 ## Core Concepts
-- `DispatcherServlet`
-- `@Controller`, `@RestController`
-- `@ControllerAdvice`
+- Controllers
+- Dispatcher Servlet
 - Mapping Requests
 - Handler Methods
-- `@ExceptionHandler`
-- `UriComponents(Builder)`
+- Type conversion // ToDO
+- URI Construction
 - `RestTemplate`
 - `@EnableWebMvc`
 
+### Controllers
+- `@Controller`
+- `@RestController` -> `@Controller` + `@ResponeBody`
+- `@ControllerAdvice` -> 
+- 
+
+
 ### Dispatcher Servlet
-- `HandlerMapping`
-- `HandlerAdapter`
-- `HandlerExceptionResolver`
-- `ViewResolver`
+- `HandlerMapping`: Determines which handler object (controller/method) to use
+- `HandlerAdapter`: Knows how to invoke the method
+- `ViewResolver`: Resolves view names to actual views
+- `HandlerExceptionResolver`: Handles exceptions thrown during request handling
+- `@ExceptionHandler`: 
 
 ### Mapping Requests
-- `@RequestMapping`
-- `@GetMapping`
-- `@PostMapping`
-- `@PutMapping`
-- `@DeleteMapping`
-- `@PatchMapping`
+- `@RequestMapping`: general mapping of requests
+- `@GetMapping`: specialized mapping for get requests
+- `@PostMapping`: specialized mapping for post requests
+- `@PutMapping`: specialized mapping for put requests
+- `@DeleteMapping`: specialized mapping for delete requests
+- `@PatchMapping`: specialized mapping for patch requests
 
 ### Handler Methods
-- `@PathVariable`
-- `@RequestParam`
-- `@RequestHeader`
-- `@RequestBody`
-- `@ResponseBody`
-- `ResponseEntity<T>`
-- 
+- `@PathVariable`: binds uri template variable (`/users/{id}`) to a method parameter
+- `@MatrixVariable`: binds a matrix variable (`/cars;color=red;year=2012`) from the uri to a method parameter
+- `@RequestParam`: binds a query parameter (`/search?term=spring`) to a method parameter
+- `@RequestHeader`: binds a request header to a method parameter
+- `@CookieValue`: binds a cookie value to a method parameter
+- `@RequestBody`: deserializes the request body into a java object
+- `@ResponseBody`: serializes the methods return value into the response body
+- `ResponseEntity<T>`: wraps a response body, status and headers and gives full control over the HTTP response 
+
 ### Validation
-- `@Valid`/`@Validated`
-- `@Constraint` annotations
+- `@Validated`: triggers automatic validation of the annotated object
+- `@Valid`: triggers automatic validation of the annotated object (jsr-303)
+- `@Constraint`: used to create custom validation annotations
+
+### URI Construction
+- `UriComponents`: represents a fully built URI
+- `UriComponentsBuilder`: a builder used to create URI with template variables support
