--- a/5. Security/5. Security.md
+++ b/5. Security/5. Security.md
@@ -50,6 +50,7 @@
 - `@EnableMethodSecurity`
 - `@EnableGlobalMethodSecurity`
 - `@PreAuthorize`/`@PostAuthorize`
+- `@PreFilter`/`@PostFilter`
 
 ### Testing Security
 - `@WithMockUser`
