--- a/6. Spring Boot/6. Spring Boot.md
+++ b/6. Spring Boot/6. Spring Boot.md
@@ -14,7 +14,8 @@
    4. [Logging](https://docs.spring.io/spring-boot/reference/features/logging.html)
    5. [Aspect-Oriented Programming](https://docs.spring.io/spring-boot/reference/features/aop.html)
    6. [JSON](https://docs.spring.io/spring-boot/reference/features/json.html)
-   7. [Condition Annotation](https://docs.spring.io/spring-boot/reference/features/developing-auto-configuration.html#features.developing-auto-configuration.condition-annotations)
+   7. [Configuration Order](https://docs.spring.io/spring-boot/reference/features/developing-auto-configuration.html#features.developing-auto-configuration.locating-auto-configuration-candidates)
+   8. [Condition Annotation](https://docs.spring.io/spring-boot/reference/features/developing-auto-configuration.html#features.developing-auto-configuration.condition-annotations)
 4. [Web](https://docs.spring.io/spring-boot/reference/web/index.html)
    1. [Servlet Web Applications](https://docs.spring.io/spring-boot/reference/web/servlet.html)
    2. [Spring Security](https://docs.spring.io/spring-boot/reference/web/spring-security.html)
@@ -34,6 +35,7 @@
 - Auto-Configuration
 - `@EnableAutoConfiguration`
 - Configuration and Precedence
+- `@AutoConfigureOrder`, `@AutoConfigureBefore`, `@AutoConfigureAfter`
 - Condition Annotation
 
 ### Integration
