Finish improving and adding explanations for Spring Core, Data Management and Spring MVC

--- a/1. Spring Core/1.3 Aspect Oriented Programming with Spring.md
+++ b/1. Spring Core/1.3 Aspect Oriented Programming with Spring.md
@@ -19,32 +19,53 @@
 
 
 ## Core Concepts
-- Aspect
-- Advice
-- Join point
-- Pointcut
-- Target object
-- AOP proxies
-- Weaving
-- Introduction
+- `@EnableAspectJAutoProxy`: enable spring support for AOP using `@AspectJ` style
+- `@Aspect`: a modularization of a concern that cuts across multiple classes
+- Join point: a point during the execution of a program, in spring it is always a method execution
+- Advice: action taken by an aspect at a particular join point
+- `@Pointcut`: a predicate that matches join points
+- Target object: an object being advised by one or more aspects
+- AOP proxy: an object created by the AOP framework to implement aspect contracts
+- Weaving: the process of linking aspects with target objects to create an advised object using proxy mechanisms
 
-### Annotations
-- `@Aspect`
-- `@Pointcut`
+### Advice Types
+- `@Before`: advice that runs before a join point
+- `@After`: advice to be run regardless of the way the join point exits
+- `@AfterReturning`: advice to be run after join point completes normally
+- `@AfterThrowing`: advice to be run after join point exits by throwing an exception
+- `@Around`: advice that surrounds a join point
 
 ### Pointcut Designators
-- `execution`
-- `within`
-- `this`
-- `target`
-- `args`
-- `@target`
-- `@args`
-- `@within`
-- `@annotation`
-- kinded vs scoping vs contextual
+- `execution`: matching method execution join points
+- `within`: matching join points within certain types
+- `this`: matching to join points where the bean reference is an instance of the given type
+- `target`: matching to join points where the target object is an instance of the given type
+- `args`: matching to join points where the arguments are instances of the given types
+- `@target`: matching join points where the class of the executing object has an annotation of the given type
+- `@args`: matching to join points where the runtime type of the actual arguments passed have annotations of the given type
+- `@within`: matching to join points within types that have the given annotation
+- `@annotation`: matching to join points where the subject of the join point has the given annotation
+- `&&`, `||`, `!`: combining pointcut expressions
 
-### Supported Proxy Mechanisms
-- JDK dynamic proxies
-- CGLIB
-- Self-invocation
+### Advice Parameters
+- `JoinPoint`, `ProceedingJoinPoint` (for `@Around`): provides information and state available at a join point
+- `getArgs()`, `getThis()`, `getTarget()`, `getSignature()`: methods returning the specific state available at a join point
+- [Passing Parameters to Advice](https://docs.spring.io/spring-framework/reference/core/aop/ataspectj/advice.html#aop-ataspectj-advice-params-passing)
+
+### Advice Ordering
+- `@Order`: annotation to define the order of the advice
+- `Ordered`: interface to define the order of the advice
+
+### Proxying Mechanisms
+- JDK dynamic proxies: if the target implements at least one interface
+- CGLIB proxies: if the target object does not implement any interfaces, creating as a runtime-generated subclass of the target object
+- AspectJ compile-time and load-time weaving: applying advice within the bytecode at compile-time/load-time
+
+### JDK dynamic proxies limitations
+- final methods can't be intercepted
+- proxy is not of the target class type (`instanceof` might fail)
+
+### CGLIB proxies limitations
+- final classes can't be proxied
+- final methods can't be intercepted
+- methods that are not visible (private or package-private) can't be intercepted
