--- a/2. Data Management/2.2 Data Access with JDBC.md
+++ b/2. Data Management/2.2 Data Access with JDBC.md
@@ -9,14 +9,18 @@
 ### Spring Academy
 - [JDBC Simplification with Jdbc Template](https://spring.academy/courses/spring-framework-essentials/lessons/spring-essentials-jdbc-traditional-jdbctemplate)
 
-
 ## Core Concepts
-- `JdbcTemplate`
-- `queryForObject(..)` -> `SELECT`
-- `update(..)` -> `INSERT`, `UPDATE`, `DELETE`
-- `execute(..)`
+- `DataSource`: a factory for connections
+- `JdbcTemplate`: central helper class for JDBC access
+- Query Callbacks & Callers
 
-### Callback Interfaces
-- `RowMapper`
-- `ResultSetExtractor`
-- `RowCallbackHandler`
+### JdbcTemplate
+- `query()`/`queryForObject()`: run SQL queries (`SELECT`) 
+- `update()`: run SQL DML statements like `INSERT`, `UPDATE` and `DELETE`
+- `execute()`: run arbitrary SQL statements, for example DDL statements
+- `SQLExceptionTranslator`: automatically translates `SQLException`'s into unchecked `DataAccessException`'s
+
+### Query Callbacks
+- `RowMapper<T>`: mapping a single row to a type `T`
+- `ResultSetExtractor<T>`: mapping the whole `ResultSet` to a type `T`
+- `RowCallbackHandler`: processing a `ResultSet` without returning anything
