--- a/2. Data Management/2.3 Transaction Management.md
+++ b/2. Data Management/2.3 Transaction Management.md
@@ -14,32 +14,39 @@
 
 
 ## Core Concepts
-- Transaction
-- Propagation
+- `@EnableTransactionManagement`: enables annotation-driven transaction management
+- `@Transactional`: declares that a method or class executes within a transaction
+- `PlatformTransactionManager`: programmatic transaction control
+- `TransactionTemplate`: callback approach for programmatic transaction execution
+- Transaction Propagation
 - Isolation
-- ACID
 - Rollback
-- `@Transactional`
-- `@EnableTransactionManagement`
-- `TransactionTemplate`/`PlatformTransactionManager`
+- ACID
 
 ### Transaction Propagation
-- `REQUIRED` (default) 
-- `REQUIRES_NEW`
-- `SUPPORT`
-- `NESTED`
-- `MANDATORY`
-- `NOT_SUPPORTED`
-- `NEVER`
+- `REQUIRED`: Support a current transaction, create a new one if none exists.
+- `REQUIRES_NEW`: Create a new transaction, and suspend the current transaction if one exists.
+- `NESTED`: Execute within a nested transaction if a current transaction exists, behave like `REQUIRED` otherwise.
+- `SUPPORTS`: Support a current transaction, execute non-transactionally if none exists.
+- `MANDATORY`: Support a current transaction, throw an exception if none exists.
+- `NOT_SUPPORTED`: Execute non-transactionally, suspend the current transaction if one exists.
+- `NEVER`: Execute non-transactionally, throw an exception if a transaction exists.
 
 ### Isolation
-- `READ_UNCOMMITED`
-- `READ_COMITTED`
-- `REPEATABLE_READ`
-- `SERIALIZABLE`
+- `READ_UNCOMMITTED`: allows reading uncommited changes from other transactions, thus dirty reads, non-repeatable reads and phantom reads can occur
+- `READ_COMMITED`: only reads changes that have been committed, non-repeatable reads and phantom reads can occur
+- `REPEATABLE_READ`: ensures that multiple reads will return the same data, phantom reads can occur
+- `SERIALIZABLE`: provides full isolation by executing transactions as if they were run sequentially
+
+### Rollback
+- By default, a transaction will be rolled back on `RuntimeException` and `Error`
+- `@Transactional(rollbackFor = <...>)`: define exception types that should trigger a rollback
+- `@Transactional(noRollbackFor = <...>)`: define exception types that should **not** trigger a rollback
 
 ### ACID
-- Atomicity: single unit (all or nothing)
-- Consistency: from valid state into a valid state
-- Isolation: no interference between transactions
-- Durability: commits are permanent, even after a crash
+- Atomicity: ensures a transaction's operations all succeed or fail together as a single unit
+- Consistency: guarantees that a transaction moves the database from one valid state to another
+- Isolation: ensures that concurrently executing transactions do not interfere by isolating transaction
+- Durability: once a transaction commits, its changes are permanent and survive system failures
+
+
