--- a/3. Spring MVC/3. Spring MVC.md
+++ b/3. Spring MVC/3. Spring MVC.md
@@ -33,28 +33,31 @@
 
 
 ## Core Concepts
-- Controllers
+- `@EnableWebMvc`: enables Spring MVC configuration
+- Controller
 - Dispatcher Servlet
+- Model and View Handling
 - Mapping Requests
 - Handler Methods
-- Type conversion // ToDO
 - URI Construction
-- `RestTemplate`
-- `@EnableWebMvc`
+- API Client
 
-### Controllers
-- `@Controller`
-- `@RestController` -> `@Controller` + `@ResponeBody`
-- `@ControllerAdvice` -> 
-- 
-
+### Controller
+- `@Controller`: marks a class as a web controller that maps http requests to methods
+- `@RestController`: shorthand for `@Controller` and `@ResponseBody`
+- `@ControllerAdvice`: declares a class that applies cross-cutting concers (e.g. exception handling, data binding, etc.) globally to all controllers
 
 ### Dispatcher Servlet
 - `HandlerMapping`: Determines which handler object (controller/method) to use
 - `HandlerAdapter`: Knows how to invoke the method
 - `ViewResolver`: Resolves view names to actual views
 - `HandlerExceptionResolver`: Handles exceptions thrown during request handling
-- `@ExceptionHandler`: 
+- `@ExceptionHandler`: declares a method that handles specific exceptions thrown in controller methdos
+
+### Model and View Handling
+- `Model`: carries data from controller to view
+- `View`: represents the actual rendering logic
+- `ModelAndView`: combines model data and view
 
 ### Mapping Requests
 - `@RequestMapping`: general mapping of requests
@@ -82,3 +85,6 @@
 ### URI Construction
 - `UriComponents`: represents a fully built URI
 - `UriComponentsBuilder`: a builder used to create URI with template variables support
+
+### API Client
+- `RestTemplate`: Synchronous, blocking HTTP client for calling REST APIs
