--- a/2. Data Management/2.1 DAO Support.md
+++ b/2. Data Management/2.1 DAO Support.md
@@ -1,7 +1,5 @@
 # [DAO Support](https://docs.spring.io/spring-framework/reference/data-access/dao.html)
 
 ## Core Concepts
-- Exception Hierarchy
-- `DataAccessObject`
-- `@Repository`
-- `DataSource`
+- `DataAccessException`: root exception for data access
+- `@Repository`: stereotype annotation for data access objects
