Fix typos in Spring MVC chapter

--- a/3. Spring MVC/3. Spring MVC.md
+++ b/3. Spring MVC/3. Spring MVC.md
@@ -45,14 +45,14 @@
 ### Controller
 - `@Controller`: marks a class as a web controller that maps http requests to methods
 - `@RestController`: shorthand for `@Controller` and `@ResponseBody`
-- `@ControllerAdvice`: declares a class that applies cross-cutting concers (e.g. exception handling, data binding, etc.) globally to all controllers
+- `@ControllerAdvice`: declares a class that applies cross-cutting concerns like exception handling, data binding, etc. globally to all controllers
 
 ### Dispatcher Servlet
 - `HandlerMapping`: Determines which handler object (controller/method) to use
 - `HandlerAdapter`: Knows how to invoke the method
 - `ViewResolver`: Resolves view names to actual views
 - `HandlerExceptionResolver`: Handles exceptions thrown during request handling
-- `@ExceptionHandler`: declares a method that handles specific exceptions thrown in controller methdos
+- `@ExceptionHandler`: declares a method that handles specific exceptions thrown in controller methods
 
 ### Model and View Handling
 - `Model`: carries data from controller to view
