Add missing @ResponseStatus to Spring MVC

--- a/3. Spring MVC/3. Spring MVC.md
+++ b/3. Spring MVC/3. Spring MVC.md
@@ -76,6 +76,7 @@
 - `@RequestBody`: deserializes the request body into a java object
 - `@ResponseBody`: serializes the methods return value into the response body
 - `ResponseEntity<T>`: wraps a response body, status and headers and gives full control over the HTTP response 
+- `@ResponseStatus`: set the general response status code if not set by other sources
 
 ### Validation
 - `@Validated`: triggers automatic validation of the annotated object
