Add improvements for Testin chapter

--- a/4. Testing/4. Testing.md
+++ b/4. Testing/4. Testing.md
@@ -33,34 +33,55 @@
 
 
 ## Core Concepts
-- JUnit 5 vs JUnit 4 (`@ExtendWith` vs `@RunWith`)
-- Unit Testing vs Integration Testing
-- Stubs/Mocks
-- `TestContext` framework
+- JUnit: Unit testing that doesn't require Spring
+- Integration Testing
 
-### Creating Tests
-- `@SpringJUnitConfig`
-- Embedded `@Configuration` class in tests
-- `@MockBean` (`@MockitoBean` since 6.2)
-- `@Mock` vs `@MockBean`
-- `@DirtiesContext`
-- `MockMvc`
-- `MockHttpServletRequestBuilder`
+### Integration Testing
+- TestContext Framework: provides generic, annotation-driven unit and integration testing support
+- `@ExtendWith(SpringExtension.class)`: extension for spring support in JUnit 5 tests
+- `@ContextConfiguration`: specifying how to load the `ApplicationContext` for tests by applying configs
+- `@SpringJUnitConfig`: combines `@ExtendWith(SpringExtension.class)` and `@ContextConfiguration`
+- `@Autowired`: inject spring beans into tests
+- Embedded `@Configuration` class in tests: spring extension automatically loading embedded configuration classes
+- `@TestConfiguration`: define test classes specifically for test-only bean definitions
+- `@DirtiesContext`: forcing the `ApplicationContext` to reload after the test
+- `@TestPropertySource`: provides test-specific property values with high precedence
+- `@ActiveProfiles`: specifies which profiles are active during the test
+- `@Sql`: executes specified SQL scripts before/after tests
+- `@SqlConfig`: configuring how `@Sql` scripts should execute, for example setting the errorMode or transaction behavior
+- `@Transactional`: ensures tests run within a transaction that are rolled back after each test by default
+- `@Commit`: makes the test to commit after running
+- `@Rollback`: makes the test rollback after running
 
-### Configuration
-- `@ContextConfiguration`
-- `@TestPropertySource`
-- `@ActiveProfiles`
+### Spring Boot Testing
 
-### Database integration
-- `@Sql`
-- Transactions
+##### Test Setup
+- `@SpringBootTest`: loads full spring application context for end-to-end testing
+- `@SpringBootTest(webEnvironment)`
+  - `MOCK`: mock the web server
+  - `RANDOM_PORT`: start the web server on a random port
+  - `DEFINED_PORT`: start the web server on a defined port
+  - `NONE`: disable the web server
+- `@SpringBootConfiguration`: mark a configuration class for Spring Boot tests
 
-### Testing in Spring Boot
-- `@SpringBootTest`
-- Testing Dependencies coming with `spring-boot-starter-test`
-- `TestRestTemplate`
-- `@AutoConfigureMockMvc`
-- Test slices (`@WebMvcTest`, `@DataJpaTest`, ...)
-- `TestEntityManager` in JPA tests
-- `@AutoConfigureTestDatabase`
+##### HTTP Testing
+- `TestRestTemplate`: fault-tolerant rest template for integration tests
+- `RestTemplateBuilder`: builder to customize `TestRestTemplate` configuration
+
+##### Mocking
+- `@MockBean`: create mock and add to the IoC container
+- `@AutoConfigureMockMvc`: automatically configures `MockMvc`
+- `MockMvc`: testing Spring MVC controllers with a fluent API
+- `MockMvcRequestBuilders.*`: static factory methods to build HTTP requests (`get()`, `post()`, ...)
+- `MockMvcResultMatchers.*`: fluent assertions for response status, headers, content, etc.
+- JsonPath: A library used in assertions to extract and assert parts of a JSON
+
+
+##### Slice Testing
+- `@WebMvcTest(<controller>)`: loads only the Spring MVC infrastructure and the specified controller for more focused testing
+- `@DataJpaTest`: loads only JPA-related components with rollback after each test
+  - `TestEntityManager`: simplified API for working with entities in JPA tests
+  - `@AutoConfigureTestDatabase`: controlling the `DataSource` used in tests
+- `@JsonTest`: focused testing on JSON serialization and deserialization
+- `@Transactional`: ensures tests run within a transaction, these roll back after each test by default
+
