Add improvements and explanations for Security chapter

--- a/5. Security/5. Security.md
+++ b/5. Security/5. Security.md
@@ -18,40 +18,68 @@
 
 
 ## Core Concepts
-- `Principal`
-- Authentication
-- Authorization
-- Authority/Roles
-- Secured Resource
-
-### Security Filter Chain
-- `DelegatingFilterProxy`
-- `SecurityContextPersistenceFilter`
-- `LogoutFilter`
-- `UsernamePasswordAuthenticationFilter`
-- `ExceptionTranslationFilter`
-- `AuthorizationFilter`
+- Authentication: confirm whether an individual or user is who they are
+- Authorization: determines what actions an authenticated user is allowed to perform
+- Security Filter Chain
+- Authentication Flow
+- URL Authorization
+- Method Security
+- Security in Tests
 
 ### Authentication
-- Authentication Flow
-- `AuthenticationProvider`
-- `UserDetailsService`/`UserDetailsManager`
-- `PasswordEncoder`
+- Authentication Mechanisms: Basic, Digest, Form, X.509, Oauth 2.0 / OIDC
+- `Principal`: currently authenticated user, device or system that performs an action
+- `UserDetails`: represents user-specific information such as username, password and roles
+- `UserDetailsService`: service for loading user information typically from a database
+- `PasswordEncoder`: used to encode and verify passwords securely
 
-### Security for Spring MVC
-- `HttpSecurity`
-- Request Matcher (`requestMatchers`)
-- Deprecated Matcher (`antMatchers`/`mvcMatchers`)
-- `WebSecurityCustomizer`
+### Authorization
+- `Authority`: a permission or role granted to a user
+
+### URL Authorization
+- `HttpSecurity`: configures web-based security, including which URLs require authentication or specific roles
+- `SecurityFilterChain`: a filter chain used to match against `HttpServletRequest`s
+- `requestMatchers()`: matching requests against path patterns, HTTP methods, etc.
+- `WebSecurityCustomizer`: exclude specific requests from the `SecurityFilterChain` completely
 
 ### Method Security
-- `AccessDeniedException`
-- `SecurityInterceptor`
-- `@EnableMethodSecurity`
-- `@EnableGlobalMethodSecurity`
-- `@PreAuthorize`/`@PostAuthorize`
-- `@PreFilter`/`@PostFilter`
+- `@EnableMethodSecurity`: enables method-level Spring Security
+  - `prePostEnabled`: enables pre/post annotations
+  - `securedEnabled`: enables `@Secured` annotation
+  - `jsr250Enabled`: enables support for standard JSR-250 annotations
+- `SpringSecurityInterceptor`: a method interceptor that applies security checks at the method level using AOP
 
-### Testing Security
-- `@WithMockUser`
-- `@WithUserDetails`
+##### Pre/Post Annotations
+- `@PreAuthorize`: evaluates a security expression before the method is invoked
+- `@PostAuthorize`: evaluates a security expression after the method is invoked 
+- `@PreFilter`: filtering a collection from the method parameters before the method is invoked 
+- `@PostFilter`: filtering the returned collection after the method is invoked 
+
+##### Secured Annotations
+- `@Secured`: set the required list of security configuration attributes like `ROLE_USER`
+
+##### JSR-250 Annotations
+- `@RolesAllowed`: define the required roles to execute this method
+- `@PermitAll`: allows all users
+- `@DenyAll`: denies access to everyone
+
+
+### Security Filter Chain
+- `DelegatingFilterProxy`: delegates to filter chains
+- `SecurityContextPersistenceFilter`: establishes a `SecurityContext`
+- `LogoutFilter`: clears `SecurityContextHolder` on logout request
+- `UsernamePasswordAuthenticationFilter`: puts authentication into `SecurityContext` on login request
+- `ExceptionTranslationFilter`: converts exceptions into HTTP responses or redirects
+- `AuthorizationFilter`: authorizes web requests based on the configuration
+
+### Authentication Flow
+1. `BasicAuthenticationFilter`: intercepts incoming request with Basic requests
+2. `UsernamePasswordAuthenticationToken`: a `Authentication` implementation used to hold the username and password
+3. `ProviderManager`: delegates the authentication request to a chain of configured `AuthenticationProvider`
+4. `AuthenticationProvider`: validates the `Authentication` using the `UserDetailsService`
+5. `UserDetailsService#loadUserById()`: loads the user's information to verify authentication request
+6. Populates `SecurityContext` with the new authentication
+
+### Security in Tests
+- `@WithMockUser`: simulates an authenticated user for the duration of a test
+- `@WithUserDetails`: loads a user by username using a real `UserDetailsService`
